--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,15 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.app_container {
+	border: 2px solid;
+	/* width: 500px; */
+	display: flex;
+	justify-content: center;
+}
+
+.canvas {
+	position: absolute;
 }
