--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,10 @@
 .App {
 	text-align: center;
+	height: 100vh;
+	overflow: hidden;
 }
-/*
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 
 .app_container {
-	/* border: 2px solid; */
-	/* width: 500px; */
 	display: flex;
 	justify-content: center;
 }
@@ -55,4 +20,20 @@
 .behind {
 	z-index: -1;
 	width: 200px;
+}
+
+.flex-1 {
+	flex: 1;
+}
+.outer-container {
+	display: flex;
+}
+.charts {
+	max-width: 50vw;
+	overflow-y: auto;
+}
+
+.chart-outer {
+	overflow: scroll;
+	height: 90vh;
 }
